--- a/app/components/allInOne.css
+++ b/app/components/allInOne.css
@@ -67,6 +67,7 @@ body{
 	position: relative;
 	width: 50%;
 	margin: 0 auto;
+	float: right;
 
 }
 
@@ -74,10 +75,18 @@ body{
 	border-radius: 7px;
 	position: relative;
 	height: 600px;
+	width: 750px;
 	border: 1px solid black;
 	background:black 0 0/100% 100%;
 	box-shadow: 2px -6px 27px 10px #052d13;
+	transition: all 0.3s linear;
+	opacity: 1;
 }
+
+.coverChange{
+	opacity: 0.5;
+}
+
 
 .allBtn{
 	position: absolute;
@@ -134,5 +143,46 @@ body{
 	width: 100px;
 	border-radius: 7px;
 	transition: all 0.1s linear;
+}
+
+
+.searchDiv{
+	float: left;
+	width: 50px;
+	height: 50px;
+	border: 1px solid red;
+	border-radius: 50%;
+	margin-left: 50px;
+	transition: all 0.3s linear;
+	cursor: pointer;
+}
+
+#search{
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	outline: none;
+	border: none;
+	position: relative;
+	bottom: 50px;
+}
+.searchDiv::focus{
+	width: 300px;
+	height: 60px;
+}
+
+.searchDiv::before{
+	content: 'ss';
+	z-index: 1;
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    transition: all 0.3s linear;
+}
+.searchDiv:click::before{
+	visibility: hidden;
 }
 
