--- a/app/components/allInOne.css
+++ b/app/components/allInOne.css
@@ -76,7 +76,6 @@ body{
 	position: relative;
 	height: 600px;
 	width: 750px;
-	border: 1px solid black;
 	background:black 0 0/100% 100%;
 	box-shadow: 2px -6px 27px 10px #052d13;
 	transition: all 0.3s linear;
@@ -129,12 +128,20 @@ body{
 	cursor: pointer;
 	height: 100px;
 	margin-left: -30px;
-
 }
 
 .pList img:hover{
 	height: 120px;
 	width: 120px;
+}
+.albumPreset{
+	display: none;
+	position: absolute;
+	width: 200px;
+	height: 150px;
+	border: 1px solid red;
+	background: green;
+	left: -350px;
 }
 
 .blurAlbum{
