--- a/app/components/allInOne.css
+++ b/app/components/allInOne.css
@@ -1,6 +1,7 @@
 *{
 	padding: 0;
 	margin: 0;
+	font-family: 'Kaushan Script', cursive;
 }
 
 body{
@@ -77,7 +78,7 @@ body{
 	height: 600px;
 	width: 750px;
 	background:black 0 0/100% 100%;
-	box-shadow: 2px -6px 27px 10px #052d13;
+	box-shadow: 2px -6px 27px 10px #0c2d48;
 	transition: all 0.3s linear;
 	opacity: 1;
 }
@@ -113,7 +114,7 @@ body{
 .pList li{
 	margin: 5px 5px;
 	height: 50px;
-	transition: all 0.4s linear;
+	transition: all 0.3s linear;
 	position: relative;
 	left: 50px;
 
@@ -127,21 +128,43 @@ body{
 	background: #0152;
 	cursor: pointer;
 	height: 100px;
-	margin-left: -30px;
+	transform: translateX(-45px);
 }
 
 .pList img:hover{
-	height: 120px;
-	width: 120px;
+	transform: scale(1.2);
 }
 .albumPreset{
 	display: none;
 	position: absolute;
-	width: 200px;
-	height: 150px;
-	border: 1px solid red;
-	background: green;
-	left: -350px;
+	width: 300px;
+	height: 180px;
+	left: -450px;
+	border-radius: 7px;
+}
+.albumPreset::before{
+	position: absolute;
+	z-index: -1;
+	filter: blur(7px);
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: red url('../../static/images/back1.png')  fixed 0 0/100% 100%;
+}
+
+
+.albumPreset p{
+	font-size: 26px;
+	margin: 5px;
+}
+.albumPreset p:nth-child(3){
+	font-size: 18px;
+}
+.albumPreset p:nth-child(5){
+	position: absolute;
+	bottom: 15px;
+	font-size: 24px;
 }
 
 .blurAlbum{
@@ -149,7 +172,7 @@ body{
 	height: 100px;
 	width: 100px;
 	border-radius: 7px;
-	transition: all 0.1s linear;
+	transition: all 0.3s linear;
 }
 
 
@@ -193,3 +216,8 @@ body{
 	visibility: hidden;
 }
 
+hr{
+	background: rgb(12, 45, 72);
+    border: none;
+    height: 2px;
+}
