--- a/app/components/allInOne.css
+++ b/app/components/allInOne.css
@@ -16,14 +16,15 @@ body{
 
 
 .cpt-header{
+	margin-top: 20px;
 	height: 45px;
 	background-color: transparent;
 }
 
 .header-title{
 	color: #7ec8e3;
-	text-align: right;
-	padding: 0 10%;
+	text-align: left;
+	padding-left:50%;
 }
 .cpt-pgs{
 	height: 21px;
@@ -69,7 +70,7 @@ body{
 	z-index: 1;
 	position: relative;
 	width: 50%;
-	margin: 0 auto;
+	margin: 15px auto;
 	float: right;
 
 }
