--- a/app/components/allInOne.css
+++ b/app/components/allInOne.css
@@ -368,7 +368,6 @@ hr{
 	text-align: center;
 	background: #eee;
 	width: 114px;
-	border: 1px solid darkred;
 	margin: 5px 0px;
 	float: left;
 	list-style: none;
@@ -391,7 +390,7 @@ hr{
 .detailSolo p{
 	cursor: pointer;
 	font-size: 24px;
-	margin: 8px;
+	margin: 18px 15px;
 }
 .detailSolo p:hover{
 	border:1px dotted #208CC2;
